Make version info consistent across all pages and sidebar

--- a/views/partials/admin-responsive-sidebar.ejs
+++ b/views/partials/admin-responsive-sidebar.ejs
@@ -128,7 +128,7 @@
         <div class="version-details">
             <div class="version-item">
                 <span class="version-label">Version:</span>
-                <span class="version-value"><%= typeof versionInfo !== 'undefined' ? versionInfo.version : '1.0.0' %></span>
+                <span class="version-value"><%= typeof versionInfo !== 'undefined' ? versionInfo.versionName : 'Unknown Version' %></span>
             </div>
             <div class="version-item">
                 <span class="version-label">Build:</span>
